# agent-orechestration-handoff

./: README.md
agent-orchestrator/: .env.example  .gitignore  Jenkinsfile  Jenkinsfile.monitor  cli.py  projects.yaml  pyproject.toml
agent-orchestrator/.roo/skills/: SKILL-fastapi.md  SKILL-java-spring.md  SKILL-react.md  SKILL-rpi-implement.md  SKILL-rpi-plan.md  SKILL-rpi-research.md
agent-orchestrator/agents/: fastapi_agent.py  java_agent.py  react_agent.py
agent-orchestrator/config/: apps.yaml
agent-orchestrator/config/contexts/: fastapi.md  react.md  (+1 more)
agent-orchestrator/connectors/: base_connector.py  bitbucket_connector.py  local_connector.py
agent-orchestrator/guards/: __init__.py  convention_guard.py
agent-orchestrator/intelligence/: work_intelligence.py
agent-orchestrator/monitors/: health_monitor.py
agent-orchestrator/orchestrators/: base_orchestrator.py  fastapi_orchestrator.py  java_orchestrator.py  rpi_orchestrator.py
agent-orchestrator/tasks/: README.md  agm-api.md  agm-web.md  new-client-api.md  new-client-web.md  new-hire-api.md  new-hire-web.md  peekr-api.md  peekr-web.md
agent-orchestrator/tests/: test_base_orchestrator.py  test_bitbucket_connector.py  test_contract_schema.py  test_convention_guard.py  test_fastapi_agent.py  test_fastapi_orchestrator.py  test_fastapi_rules.py  test_health_monitor.py  test_java_agent.py  test_java_rules.py  test_local_connector.py  test_pattern_index.py  test_react_agent.py  test_react_rules.py  test_slack_poster.py  test_work_intelligence.py  test_work_log.py
agent-orchestrator/utils/: roo_client.py
(+3 files in other folders)
