[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "AI-powered orchestrator CLI across 4 full-stack applications"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
agent-orchestrator = "cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["connectors*", "orchestrators*", "agents*", "guards*", "monitors*", "intelligence*", "utils*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
